syntax = "proto3";

package pb;

message Blank {}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message OrderList {
  repeated Order orders = 1;
}

service OrderService {
  rpc ListOrders (Blank) returns (OrderList) {};
}